# FastApiWithAuthSample

./: .env  README.md  alembic.ini  pyproject.toml
app/: config.py
app/auth/: dependencies.py
app/dao/: base.py  database.py  session_maker.py
app/migration/versions/: 2025_09_06_2245-00400622bfc6_initial_migration.py
data/: db.sqlite3
